--- a/main-server/templates/index.html
+++ b/main-server/templates/index.html
@@ -52,9 +52,8 @@
             <div class="view">
 
                 <!--Video source-->
-                <video class="video-intro" autoplay loop muted>
-                    <source src="videos/earthquake.mov" type="video/mp4">
-                </video>
+                <img class="video-intro" src="img/elec.jpg">
+
                 <!-- Mask & flexbox options-->
                 <div class="mask rgba-black-light d-flex justify-content-center align-items-center">
                     <!-- Content -->
@@ -179,7 +178,7 @@
                         Siddhant Saoji <br>
                     </p>
                     <!-- CTA -->
-                    <a target="_blank" href="https://github.com/anshulahuja98/CFD-18/" class="btn btn-grey btn-md">Code
+                    <a target="_blank" href="https://github.com/anshulahuja98/CFD-19-IITJ/" class="btn btn-grey btn-md">Code
                         <i class="fa fa-github ml-1"></i>
                     </a>
                     <a target="_blank" href="https://www.youtube.com/embed/_PcUHHltb04" class="btn btn-grey btn-md">Live demo
@@ -270,7 +269,7 @@
 
                 </div>
                 <div class="col-md-4">
-                    <img src="/img/custom_vision.svg" style="height: 14rem; width: 14rem; margin-left: 3rem" alt=""
+                    <img src="/img/rfid.png" style="height: 14rem; width: 14rem; margin-left: 3rem" alt=""
                          class="z-depth-0 img-fluid">
                 </div>
                 <div class="col-md-4">
@@ -278,7 +277,7 @@
                          class="z-depth-0 img-fluid">
                 </div>
                 <div class="col-md-4">
-                    <img src="/img/esp-12.png" alt=""
+                    <img src="/img/block.png" alt=""
                          class="z-depth-0 img-fluid">
                 </div>
             </div>
@@ -429,7 +428,7 @@
                     <br>
                     </p>
                     <!-- CTA -->
-                    <a target="_blank" href="https://github.com/anshulahuja98/CFD-18/" class="btn btn-grey btn-md">Code
+                    <a target="_blank" href="https://github.com/anshulahuja98/CFD-19-IITJ/" class="btn btn-grey btn-md">Code
                         <i class="fa fa-github ml-1"></i>
                     </a>
                     <a target="_blank" href="https://www.youtube.com/embed/_PcUHHltb04" class="btn btn-grey btn-md">Live demo
@@ -443,7 +442,7 @@
                 <div class="col-md-6 mb-4">
 
 
-                    <img src="img/edge.png" style="margin-left: 5rem; height: 30rem; width: 32rem;   "
+                    <img src="img/block2.png" style="margin-left: 5rem; height: 30rem; width: 32rem;   "
                          class="img-fluid z-depth-1-half" alt="">
 
                 </div>
@@ -515,7 +514,7 @@
             <i class="fa fa-youtube mr-3" style="font-size:2rem" href="https://www.youtube.com/embed/_PcUHHltb04"></i>
         </a>
 
-        <a href="https://github.com/anshulahuja98/CFD-18/" target="_blank">
+        <a href="https://github.com/anshulahuja98/CFD-19-IITJ/" target="_blank">
             <i class="fa fa-github mr-3" style="font-size:2rem"></i>
         </a>
     </div>
@@ -523,7 +522,7 @@
 
     <!--Copyright-->
     <div class="footer-copyright py-3">
-        © 2018 Copyright:
+        © 2019 Copyright:
         Team Millennium Falcon
     </div>
     <!--/.Copyright-->
