--- a/main-server/templates/index.html
+++ b/main-server/templates/index.html
@@ -28,260 +28,109 @@
                 background: #1C2331 !important;
             }
         }
+
+        .carousel-image {
+            height: auto;
+            width: 100vw;
+            vertical-align: center;
+        }
     </style>
 </head>
-
 <body>
-
-<!--Carousel Wrapper-->
-<div id="carousel-example-1z" class="carousel slide carousel-fade" data-ride="carousel">
-
-    <!--Indicators-->
+<div id="carousel-example-2" class="carousel slide carousel-fade" data-ride="carousel">
     <ol class="carousel-indicators">
-        <li data-target="#carousel-example-1z" data-slide-to="0" class="active"></li>
-        <li data-target="#carousel-example-1z" data-slide-to="1"></li>
-        <li data-target="#carousel-example-1z" data-slide-to="2"></li>
+        <li data-target="#carousel-example-2" data-slide-to="0" class="active"></li>
+        <li data-target="#carousel-example-2" data-slide-to="1"></li>
+        <li data-target="#carousel-example-2" data-slide-to="2"></li>
     </ol>
-    <!--/.Indicators-->
-
-    <!--Slides-->
     <div class="carousel-inner" role="listbox">
-
-        <!--First slide-->
         <div class="carousel-item active">
-            <div class="view">
-
-                <!--Video source-->
-                <img class="video-intro" src="img/elec.jpg">
-
-                <!-- Mask & flexbox options-->
-                <div class="mask rgba-black-light d-flex justify-content-center align-items-center">
-                    <!-- Content -->
-                    <div class="text-center white-text mx-5 wow fadeIn">
-                        <h1 class="mb-4">
-                            <strong> Project: Disaster Chain</strong><br>
-                            <strong> Team: Millennium Falcon</strong><br>
-                            <strong> College: IIT Jodhpur</strong>
-                        </h1>
-                        <iframe width="700" height="400" src="https://www.youtube.com/embed/_PcUHHltb04" frameborder="0"
-                                allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                    </div>
-                    <!-- Content -->
-                </div>
-                <!-- Mask & flexbox options-->
+            <div class="view hm-black-strong text-center"
+                 style="padding-top: 40vh; color: white; background: url('https://media1.mensxp.com/media/content/2019/Apr/things-keep-in-mind-before-casting-your-vote1-1554989146.jpg') center center; background-size: cover;">
+                <h1 class="h1-responsive font-weight-bold">Voting Vader</h1>
+                <h3 class="h3-responsive">Millennium Falcon</h3>
+                <h5 class="h5-responsive">IIT Jodhpur</h5>
             </div>
         </div>
-        <!--/First slide-->
-
-        <!--Second slide-->
         <div class="carousel-item">
-            <div class="view">
-
-                <!--Video source-->
-                <video class="video-intro" autoplay loop muted>
-                    <source src="videos/floods.mov" type="video/mp4">
-                </video>
-                <!-- Mask & flexbox options-->
-                <div class="mask rgba-black-light d-flex justify-content-center align-items-center">
-                    <!-- Content -->
-                    <div class="text-center white-text mx-5 wow fadeIn">
-                        <h1 class="mb-4">
-                            <strong> Project: Disaster Chain</strong><br>
-                            <strong> Team: Millennium Falcon</strong><br>
-                            <strong> College: IIT Jodhpur</strong>
-                        </h1>
-                        <iframe width="700" height="400" src="https://www.youtube.com/embed/_PcUHHltb04" frameborder="0"
-                                allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                    </div>
-                    <!-- Content -->
-                </div>
-                <!-- Mask & flexbox options-->
+            <div class="view hm-black-strong text-center"
+                 style="padding-top: 40vh; color: white; background: url('https://dynaimage.cdn.cnn.com/cnn/digital-images/org/9f4b373f-eaa5-4efe-b8a8-8d52f175e687.jpg') center center; background-size: cover;">
+                <h1 class="h1-responsive font-weight-bold">Voting Vader</h1>
+                <h3 class="h3-responsive">Millennium Falcon</h3>
+                <h5 class="h5-responsive">IIT Jodhpur</h5>
             </div>
         </div>
-        <!--/Second slide-->
-
-        <!--Third slide-->
         <div class="carousel-item">
-            <div class="view">
-
-                <!--Video source-->
-                <video class="video-intro" autoplay loop muted>
-                    <source src="videos/fire.mov" type="video/mp4">
-                </video>
-                <!-- Mask & flexbox options-->
-                <div class="mask rgba-black-light d-flex justify-content-center align-items-center">
-                    <!-- Content -->
-                    <div class="text-center white-text mx-5 wow fadeIn">
-                        <h1 class="mb-4">
-                            <strong> Project: Disaster Chain</strong><br>
-                            <strong> Team: Millennium Falcon</strong><br>
-                            <strong> College: IIT Jodhpur</strong>
-                        </h1>
-                        <iframe width="700" height="400" src="https://www.youtube.com/embed/_PcUHHltb04" frameborder="0"
-                                allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                    </div>
-                    <!-- Content -->
-                </div>
-                <!-- Mask & flexbox options-->
+            <div class="view hm-black-strong text-center"
+                 style="padding-top: 40vh; color: white; background: url('https://media0.mensxp.com/media/content/2019/Apr/rts2h8bi-1555235088.jpg') center center; background-size: cover;">
+                <h1 class="h1-responsive font-weight-bold">Voting Vader</h1>
+                <h3 class="h3-responsive">Millennium Falcon</h3>
+                <h5 class="h5-responsive">IIT Jodhpur</h5>
             </div>
         </div>
-        <!--/Third slide-->
-
     </div>
-    <!--/.Slides-->
-
-    <!--Controls-->
-    <a class="carousel-control-prev" href="#carousel-example-1z" role="button" data-slide="prev">
+    <a class="carousel-control-prev" href="#carousel-example-2" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
     </a>
-    <a class="carousel-control-next" href="#carousel-example-1z" role="button" data-slide="next">
+    <a class="carousel-control-next" href="#carousel-example-2" role="button" data-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
     </a>
-    <!--/.Controls-->
-
 </div>
-<!--/.Carousel Wrapper-->
-
-<!--Main layout-->
 <main>
     <div class="container">
-
-        <!--Section: Main info-->
         <section class="mt-5 wow fadeIn">
-
-            <!--Grid row-->
             <div class="row">
-
-                <!--Grid column-->
                 <div class="col-md-6 mb-4">
-
-                    <img src="img/team_1.png"
-                         class="img-fluid z-depth-1-half" alt="">
-
+                    <img src="img/team_1.png" class="img-fluid z-depth-1-half" alt="">
                 </div>
-                <!--Grid column-->
-
-                <!--Grid column-->
                 <div class="col-md-6 mb-4">
-
-                    <!-- Main heading -->
-                    <h3 class="h3 mb-3">Team: Millennium Falcon</h3>
-                    <p>College: Indian Institute of Technology, Jodhpur</p>
-                    <p>Team Members</p>
-                    <!-- Main heading -->
+                    <h3 class="h3 mb-3">Millennium Falcon</h3>
+                    <p>Indian Institute of Technology, Jodhpur</p>
                     <hr>
-                    <p>
-                        Anshul Ahuja <br>
-                        Chakshu Gupta <br>
-                        Siddhant Saoji <br>
-                    </p>
-                    <!-- CTA -->
+                    <p class="font-weight-bold">Team Members</p>
+                    <ul>
+                        <li>Anshul Ahuja</li>
+                        <li>Chakshu Gupta</li>
+                        <li>Siddhant Saoji</li>
+                    </ul>
                     <a target="_blank" href="https://github.com/anshulahuja98/CFD-19-IITJ/" class="btn btn-grey btn-md">Code
                         <i class="fa fa-github ml-1"></i>
                     </a>
-                    <a target="_blank" href="https://www.youtube.com/embed/_PcUHHltb04" class="btn btn-grey btn-md">Live demo
+                    <a target="_blank" href="https://www.youtube.com/embed/_PcUHHltb04" class="btn btn-grey btn-md">Live
+                        demo
                         <i class="fa fa-youtube ml-1"></i>
                     </a>
-
                 </div>
-                <!--Grid column-->
-
             </div>
-            <!--Grid row-->
-
         </section>
-
-        <!--Section: Main info-->
-
         <hr class="my-5">
-
-        <!--Section: Main features & Quick Start-->
-        <!--<section>-->
-
-        <!--<h3 class="h3 text-center mb-5">Team: Millennium Falcon</h3>-->
-
-        <!--&lt;!&ndash;Grid row&ndash;&gt;-->
-        <!--<div class="row wow fadeIn">-->
-
-        <!--&lt;!&ndash;Grid column&ndash;&gt;-->
-        <!--<div class="col-lg-6 col-md-12 px-4">-->
-
-        <!--&lt;!&ndash;First row&ndash;&gt;-->
-        <!--<div class="row">-->
-        <!--<div class="col-1 mr-3">-->
-        <!--<i class="fa fa-code fa-2x indigo-text"></i>-->
-        <!--</div>-->
-        <!--<div class="col-10">-->
-        <!--<h5 class="feature-title" style=font-weight: 600"> Team Members</h5>-->
-        <!--<p class="black-text">-->
-        <!--<ul>-->
-        <!--<li>Anshul Ahuja</li>-->
-        <!--<li>Aksh Chordia</li>-->
-        <!--<li>Ayush Saxena</li>-->
-        <!--</ul>-->
-        <!--</p>-->
-        <!--</div>-->
-        <!--</div>-->
-        <!--&lt;!&ndash;/First row&ndash;&gt;-->
-
-        <!--<div style="height:30px"></div>-->
-
-        <!--<div style="height:30px"></div>-->
-
-        <!--</div>-->
-        <!--&lt;!&ndash;/Grid column&ndash;&gt;-->
-
-        <!--&lt;!&ndash;Grid column&ndash;&gt;-->
-        <!--<div class="col-lg-6 col-md-12">-->
-
-        <!--&lt;!&ndash;<p class="h5 text-center mb-4">Watch our "5 min Quick Start" tutorial</p>&ndash;&gt;-->
-        <!--&lt;!&ndash;<div class="embed-responsive embed-responsive-16by9">&ndash;&gt;-->
-        <!--&lt;!&ndash;<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/cXTThxoywNQ"&ndash;&gt;-->
-        <!--&lt;!&ndash;allowfullscreen></iframe>&ndash;&gt;-->
-        <!--&lt;!&ndash;</div>&ndash;&gt;-->
-        <!--</div>-->
-        <!--&lt;!&ndash;/Grid column&ndash;&gt;-->
-
-        <!--</div>-->
-        <!--&lt;!&ndash;/Grid row&ndash;&gt;-->
-
-        <!--</section>-->
-        <!--Section: Not enough-->
         <section>
-
             <h2 class="my-5 h2 text-center">Technologies Used</h2>
             <div class="row">
                 <div class="col-md-4">
-                    <img src="/img/microsoft-azure.png"
-                         alt="" class="z-depth-0 img-fluid">
-                </div>
-
-                <div class="col-md-4">
-                    <img src="/img/db.png"
-                         alt="" class="z-depth-0 img-fluid">
+                    <img src="/img/microsoft-azure.png" alt="" class="z-depth-0 img-fluid">
                 </div>
                 <div class="col-md-4">
-                    <img src="/img/edge.png"
-                         alt="" class="z-depth-0 img-fluid">
+                    <img src="/img/db.png" alt="" class="z-depth-0 img-fluid">
+                </div>
+                <div class="col-md-4">
+                    <img src="/img/edge.png" alt="" class="z-depth-0 img-fluid">
                     <br><br><br>
-
                 </div>
                 <div class="col-md-4">
                     <img src="/img/rfid.png" style="height: 14rem; width: 14rem; margin-left: 3rem" alt=""
                          class="z-depth-0 img-fluid">
                 </div>
                 <div class="col-md-4">
-                    <img src="/img/pi.png" alt=""
-                         class="z-depth-0 img-fluid">
+                    <img src="/img/pi.png" alt="" class="z-depth-0 img-fluid">
                 </div>
                 <div class="col-md-4">
-                    <img src="/img/block.png" alt=""
+                    <img src="/img/block.png" style="height: 14rem; width: 14rem; margin-left: 3rem" alt=""
                          class="z-depth-0 img-fluid">
                 </div>
             </div>
-            <!--First row-->
             <br>
             <div class="row features-small mb-5 mt-3 wow fadeIn">
 
@@ -431,7 +280,8 @@
                     <a target="_blank" href="https://github.com/anshulahuja98/CFD-19-IITJ/" class="btn btn-grey btn-md">Code
                         <i class="fa fa-github ml-1"></i>
                     </a>
-                    <a target="_blank" href="https://www.youtube.com/embed/_PcUHHltb04" class="btn btn-grey btn-md">Live demo
+                    <a target="_blank" href="https://www.youtube.com/embed/_PcUHHltb04" class="btn btn-grey btn-md">Live
+                        demo
                         <i class="fa fa-youtube ml-1"></i>
                     </a>
 
@@ -501,47 +351,27 @@
 
     </div>
 </main>
-<!--Main layout-->
 
-<!--Footer-->
 <footer class="page-footer text-center font-small mt-4 wow fadeIn">
-
     <hr class="my-4">
-
-    <!-- Social icons -->
     <div class="pb-4">
         <a href="" target="_blank">
             <i class="fa fa-youtube mr-3" style="font-size:2rem" href="https://www.youtube.com/embed/_PcUHHltb04"></i>
         </a>
-
         <a href="https://github.com/anshulahuja98/CFD-19-IITJ/" target="_blank">
             <i class="fa fa-github mr-3" style="font-size:2rem"></i>
         </a>
     </div>
-    <!-- Social icons -->
-
-    <!--Copyright-->
     <div class="footer-copyright py-3">
-        © 2019 Copyright:
-        Team Millennium Falcon
+        Millennium Falcon © Copyright 2019
     </div>
-    <!--/.Copyright-->
-
 </footer>
-<!--/.Footer-->
 
-<!-- SCRIPTS -->
-<!-- JQuery -->
 <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
-<!-- Bootstrap tooltips -->
 <script type="text/javascript" src="js/popper.min.js"></script>
-<!-- Bootstrap core JavaScript -->
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
-<!-- MDB core JavaScript -->
 <script type="text/javascript" src="js/mdb.min.js"></script>
-<!-- Initializations -->
 <script type="text/javascript">
-    // Animations initialization
     new WOW().init();
 </script>
 </body>
