--- a/main-server/templates/index.html
+++ b/main-server/templates/index.html
@@ -41,18 +41,9 @@
     <ol class="carousel-indicators">
         <li data-target="#carousel-example-2" data-slide-to="0" class="active"></li>
         <li data-target="#carousel-example-2" data-slide-to="1"></li>
-        <li data-target="#carousel-example-2" data-slide-to="2"></li>
     </ol>
     <div class="carousel-inner" role="listbox">
         <div class="carousel-item active">
-            <div class="view hm-black-strong text-center"
-                 style="padding-top: 40vh; color: white; background: url('https://media1.mensxp.com/media/content/2019/Apr/things-keep-in-mind-before-casting-your-vote1-1554989146.jpg') center center; background-size: cover;">
-                <h1 class="h1-responsive font-weight-bold">Voting Vader</h1>
-                <h3 class="h3-responsive">Millennium Falcon</h3>
-                <h5 class="h5-responsive">IIT Jodhpur</h5>
-            </div>
-        </div>
-        <div class="carousel-item">
             <div class="view hm-black-strong text-center"
                  style="padding-top: 40vh; color: white; background: url('https://dynaimage.cdn.cnn.com/cnn/digital-images/org/9f4b373f-eaa5-4efe-b8a8-8d52f175e687.jpg') center center; background-size: cover;">
                 <h1 class="h1-responsive font-weight-bold">Voting Vader</h1>
@@ -133,10 +124,7 @@
             </div>
             <br>
             <div class="row features-small mb-5 mt-3 wow fadeIn">
-
-                <!--First column-->
                 <div class="col-md-4">
-                    <!--First row-->
                     <div class="row">
                         <div class="col-2">
                             <i class="fa fa-check-circle fa-2x indigo-text"></i>
@@ -150,9 +138,6 @@
                             <div style="height:15px"></div>
                         </div>
                     </div>
-                    <!--/First row-->
-
-                    <!--Second row-->
                     <div class="row">
                         <div class="col-2">
                             <i class="fa fa-check-circle fa-2x indigo-text"></i>
@@ -165,14 +150,8 @@
                             <div style="height:15px"></div>
                         </div>
                     </div>
-                    <!--/Second row-->
-
                 </div>
-
-
-                <!--Third column-->
                 <div class="col-md-4 mt-2">
-                    <!--First row-->
                     <div class="row">
                         <div class="col-2">
                             <i class="fa fa-check-circle fa-2x indigo-text"></i>
@@ -184,9 +163,6 @@
                             <div style="height:15px"></div>
                         </div>
                     </div>
-                    <!--/First row-->
-
-                    <!--Second row-->
                     <div class="row">
                         <div class="col-2">
                             <i class="fa fa-check-circle fa-2x indigo-text"></i>
@@ -208,11 +184,7 @@
                             <div style="height:15px"></div>
                         </div>
                     </div>
-                    <!--/Second row-->
                 </div>
-                <!--/Third column-->
-
-
                 <div class="col-md-4 mt-2">
                     <div class="row">
                         <div class="col-2">
@@ -226,26 +198,13 @@
                     </div>
                 </div>
             </div>
-            <!--/First row-->
-
-
         </section>
-        <!--Section: Not enough-->
-
         <hr class="mb-5">
 
-        <!--Section: More-->
-        <!--Section: More-->
         <section class="mt-5 wow fadeIn">
-
-            <!--Grid row-->
             <div class="row">
-                <!--Grid column-->
                 <div class="col-md-6 mb-4">
-
-                    <!-- Main heading -->
                     <h3 class="h3 mb-3">Disaster Detection at the Edge</h3>
-                    <!-- Main heading -->
                     <hr>
                     <p>
                         This is the <b>IOT</b> part of the project. It aims to bring disaster detection and early
@@ -276,7 +235,6 @@
                     </ul>
                     <br>
                     </p>
-                    <!-- CTA -->
                     <a target="_blank" href="https://github.com/anshulahuja98/CFD-19-IITJ/" class="btn btn-grey btn-md">Code
                         <i class="fa fa-github ml-1"></i>
                     </a>
@@ -284,35 +242,17 @@
                         demo
                         <i class="fa fa-youtube ml-1"></i>
                     </a>
-
                 </div>
-                <!--Grid column-->
-
-                <!--Grid column-->
                 <div class="col-md-6 mb-4">
-
-
-                    <img src="img/block2.png" style="margin-left: 5rem; height: 30rem; width: 32rem;   "
-                         class="img-fluid z-depth-1-half" alt="">
-
+                    <img src="img/block2.png" style="margin-left: 5rem; height: 30rem; width: 32rem;   " class="img-fluid z-depth-1-half" alt="">
                 </div>
-                <!--Grid column-->
-
-
             </div>
-            <!--Grid row-->
-
         </section>
+
         <section class="mt-5 wow fadeIn">
-
-            <!--Grid row-->
             <div class="row">
-                <!--Grid column-->
                 <div class="col-md-6 mb-4">
-
-                    <!-- Main heading -->
                     <h3 class="h3 mb-3">Skin Disease Diagnosis </h3>
-                    <!-- Main heading -->
                     <hr>
                     <ul>
                         <li> Using <b>Custom Vision service of Azure cognitive services</b> to predict different type of
@@ -331,24 +271,11 @@
                         </a>
                     </ul>
                 </div>
-                <!--Grid column-->
-
-                <!--Grid column-->
                 <div class="col-md-6 mb-4">
-
-
-                    <img src="img/custom_vision.svg" style="margin-left: 5rem; "
-                         class="img-fluid z-depth-1-half" alt="">
-
+                    <img src="img/custom_vision.svg" style="margin-left: 5rem; " class="img-fluid z-depth-1-half" alt="">
                 </div>
-                <!--Grid column-->
-
-
             </div>
-            <!--Grid row-->
-
         </section>
-
     </div>
 </main>
 
