--- a/main-server/templates/index.html
+++ b/main-server/templates/index.html
@@ -21,6 +21,7 @@
         header,
         .carousel {
             height: 100%;
+            overflow-x: hidden;
         }
 
         @media (min-width: 800px) and (max-width: 850px) {
@@ -245,7 +246,8 @@
                     </a>
                 </div>
                 <div class="col-md-6 mb-4">
-                    <img src="img/block2.png" style="margin-left: 5rem; height: 30rem; width: 32rem;   " class="img-fluid z-depth-1-half" alt="">
+                    <img src="img/block2.png" style="margin-left: 5rem; height: 30rem; width: 32rem;   "
+                         class="img-fluid z-depth-1-half" alt="">
                 </div>
             </div>
         </section>
@@ -273,7 +275,8 @@
                     </ul>
                 </div>
                 <div class="col-md-6 mb-4">
-                    <img src="img/custom_vision.svg" style="margin-left: 5rem; " class="img-fluid z-depth-1-half" alt="">
+                    <img src="img/custom_vision.svg" style="margin-left: 5rem; " class="img-fluid z-depth-1-half"
+                         alt="">
                 </div>
             </div>
         </section>
@@ -283,15 +286,16 @@
 <footer class="page-footer text-center font-small mt-4 wow fadeIn">
     <hr class="my-4">
     <div class="pb-4">
-        <a href="" target="_blank">
-            <i class="fa fa-youtube mr-3" style="font-size:2rem" href="https://www.youtube.com/embed/_PcUHHltb04"></i>
+        <a href="https://www.youtube.com/embed/_PcUHHltb04" target="_blank">
+            <i class="fa fa-2x fa-youtube mr-3"></i>
         </a>
         <a href="https://github.com/anshulahuja98/CFD-19-IITJ/" target="_blank">
-            <i class="fa fa-github mr-3" style="font-size:2rem"></i>
+            <i class="fa fa-2x fa-github mr-3"></i>
         </a>
     </div>
     <div class="footer-copyright py-3">
-        Millennium Falcon © Copyright 2019
+        © 2019 Copyright:
+        <a href="http://voting-vader-iitj.southeastasia.cloudapp.azure.com/" target="_blank"> Millennium Falcon </a>
     </div>
 </footer>
 
