--- a/main-server/templates/chart.html
+++ b/main-server/templates/chart.html
@@ -1,72 +1,158 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-   <meta charset="utf-8" />
-   <title>Earthquake .js </title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>Millennium Falcon | IIT Jodhpur</title>
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- Bootstrap core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <!-- Material Design Bootstrap -->
+    <link href="css/mdb.min.css" rel="stylesheet">
+    <!-- Your custom styles (optional) -->
+    <link href="css/style.min.css" rel="stylesheet">
+    <style type="text/css">
 
-   <!-- import plugin script -->
-   <script src='js/Chart.min.js'></script>
+        html,
+        body,
+        header,
+        .carousel {
+            height: 100%;
+        }
 
+        @media (min-width: 800px) and (max-width: 850px) {
+            .navbar:not(.top-nav-collapse) {
+                background: #1C2331 !important;
+            }
+        }
+
+        .carousel-image {
+            height: auto;
+            width: 100vw;
+            vertical-align: center;
+        }
+    </style>
 </head>
 <body>
+<div class="container">
+    <!-- Card Wider -->
+    <div class="card card-cascade wider">
 
-<h1>Earthquake Data</h1>
-<!-- bar chart canvas element -->
-<canvas id="chart" width="600" height="400"></canvas>
+        <!-- Card image -->
+        <div class="view view-cascade overlay">
+            <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/photo6.jpg" alt="Card image cap">
+            <a href="#!">
+                <div class="mask rgba-white-slight"></div>
+            </a>
+        </div>
 
-<script>
+        <!-- Card content -->
+        <div class="card-body card-body-cascade text-center pb-0">
 
-   // bar chart data
-   var barData = {
-   labels : [{% for item in labels %}
-                  "{{item}}",
-              {% endfor %}],
-   datasets : [
-      {
-            fillColor: "rgba(151,187,205,0.2)",
-            strokeColor: "rgba(151,187,205,1)",
-            pointColor: "rgba(151,187,205,1)",
-            pointStrokeColor: "#fff",
-            pointHighlightFill: "#fff",
-            pointHighlightStroke: "rgba(151,187,205,1)",
-            bezierCurve : false,
-            data : [{% for item in values %}
-                      {{item}},
-                    {% endfor %}]
-      }]
-   }
+            <!-- Title -->
+            <h4 class="card-title"><strong>Alison Belmont</strong></h4>
+            <!-- Subtitle -->
+            <h5 class="blue-text pb-2"><strong>Graffiti Artist</strong></h5>
+            <!-- Text -->
+            <p class="card-text">Sed ut perspiciatis unde omnis iste natus sit voluptatem accusantium doloremque
+                laudantium, totam rem aperiam. </p>
 
-    Chart.defaults.global.animationSteps = 50;
-    Chart.defaults.global.tooltipYPadding = 16;
-    Chart.defaults.global.tooltipCornerRadius = 0;
-    Chart.defaults.global.tooltipTitleFontStyle = "normal";
-    Chart.defaults.global.tooltipFillColor = "rgba(0,0,0,0.8)";
-    Chart.defaults.global.animationEasing = "easeOutBounce";
-    Chart.defaults.global.responsive = false;
-    Chart.defaults.global.scaleLineColor = "black";
-    Chart.defaults.global.scaleFontSize = 16;
+            <!-- Linkedin -->
+            <a class="px-2 fa-lg li-ic"><i class="fab fa-linkedin-in"></i></a>
+            <!-- Twitter -->
+            <a class="px-2 fa-lg tw-ic"><i class="fab fa-twitter"></i></a>
+            <!-- Dribbble -->
+            <a class="px-2 fa-lg fb-ic"><i class="fab fa-facebook-f"></i></a>
 
-   // get bar chart canvas
-   var mychart = document.getElementById("chart").getContext("2d");
+            <!-- Card footer -->
+            <div class="card-footer text-muted text-center mt-4">
+                2 days ago
+            </div>
 
-   steps = 10
-   max = 10
-   // draw bar chart
-   var LineChartDemo = new Chart(mychart).Line(barData, {
-        scaleOverride: true,
-        scaleSteps: steps,
-        scaleStepWidth: Math.ceil(max / steps),
-        scaleStartValue: 0,
-        scaleShowVerticalLines: true,
-        scaleShowGridLines : true,
-        barShowStroke : true,
-        scaleShowLabels: true,
-        bezierCurve: false,
+        </div>
 
-   });
+    </div>
+    <!-- Card Wider -->
 
+    <!-- Card Narrower -->
+    <div class="card card-cascade narrower">
 
-</script>
+        <!-- Card image -->
+        <div class="view view-cascade overlay">
+            <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Lightbox/Thumbnail/img%20(147).jpg"
+                 alt="Card image cap">
+            <a>
+                <div class="mask rgba-white-slight"></div>
+            </a>
+        </div>
+
+        <!-- Card content -->
+        <div class="card-body card-body-cascade">
+
+            <!-- Label -->
+            <h5 class="pink-text pb-2 pt-1"><i class="fas fa-utensils"></i> Culinary</h5>
+            <!-- Title -->
+            <h4 class="font-weight-bold card-title">Cheat day inspirations</h4>
+            <!-- Text -->
+            <p class="card-text">Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit
+                laboriosam, nisi ut aliquid ex ea commodi.</p>
+            <!-- Button -->
+            <a class="btn btn-unique">Button</a>
+
+        </div>
+
+        <!-- Card footer -->
+        <div class="card-footer text-muted text-center">
+            2 days ago
+        </div>
+
+    </div>
+    <!-- Card Narrower -->
+
+    <!-- Card Regular -->
+    <div class="card card-cascade">
+
+        <!-- Card image -->
+        <div class="view view-cascade overlay">
+            <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/men.jpg" alt="Card image cap">
+            <a>
+                <div class="mask rgba-white-slight"></div>
+            </a>
+        </div>
+
+        <!-- Card content -->
+        <div class="card-body card-body-cascade text-center">
+
+            <!-- Title -->
+            <h4 class="card-title"><strong>Billy Coleman</strong></h4>
+            <!-- Subtitle -->
+            <h6 class="font-weight-bold indigo-text py-2">Web developer</h6>
+            <!-- Text -->
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus, ex, recusandae.
+                Facere modi sunt, quod quibusdam.
+            </p>
+
+            <!-- Facebook -->
+            <a type="button" class="btn-floating btn-small btn-fb"><i class="fab fa-facebook-f"></i></a>
+            <!-- Twitter -->
+            <a type="button" class="btn-floating btn-small btn-tw"><i class="fab fa-twitter"></i></a>
+            <!-- Google + -->
+            <a type="button" class="btn-floating btn-small btn-dribbble"><i class="fab fa-dribbble"></i></a>
+
+        </div>
+
+        <!-- Card footer -->
+        <div class="card-footer text-muted text-center">
+            2 days ago
+        </div>
+    </div>
+
+</div>
+<!-- Card Regular -->
 
 </body>
+
 </html>
