--- a/main-server/templates/index.html
+++ b/main-server/templates/index.html
@@ -205,38 +205,18 @@
 
         <section class="mt-5 wow fadeIn">
             <div class="row">
-                <div class="col-md-6 mb-4">
-                    <h3 class="h3 mb-3">Disaster Detection at the Edge</h3>
-                    <hr>
-                    <p>
-                        This is the <b>IOT</b> part of the project. It aims to bring disaster detection and early
-                        warning
-                        system <b>to the edge from the cloud</b> while staying connected to the cloud.
+                <div class="col-md-5 mb-4">
+                    <h3 class="h3 mb-3">Motivation: Secure IOT & Blockchain based EVMs </h3>
+                
+                        The solution we propose is while keeping in mind feasibilty of implementation. Since it's difficult to change the voting process in general given the demographics and diversity of India especially in terms of geography and literacy levels. It is a hurdle to educate people on any drastic change in the voting mechanism.
                         <br>
-                        This consists of a <b>distributed IOT</b> based solution for earthquake detection and early
-                        warning
-                        system.
+                        We intend to make the voting process more transparent and fairer at the base level. 
                         <br>
-                        Using <b>Raspberry Pi as a central IOT Hub</b> for multiple IOT solutions and <b>Node MCU units
-                        acting
-                        as slave boards</b> deployed in different rooms of a given building providing <b>real time data
-                        to the
-                        central hub through API calls</b> and also capable of handling both security and automation in
-                        those
-                        rooms.
+                        Using Azure Blockchain service as the backend to ensure that data is secure, we have developed an IOT based EVM.
+                        Using raspberry Pi as the brains of the system. The EVM uses technologies such as RFiD to ensure security at the actual physical level.                                            
                         <br>
-                        - The central hub is connected to <b>Azure through REST API</b> calls to provide a dashboard
-                        <b>monitoring</b> system and as an early warning system.
+                        *We later intend to replace Raspberry Pi with AzureSphere in order to increase the security even further.                        
                         <br>
-                        <br>
-                        The central hub is responsible for following safety protocols such as
-                        <br>
-                    <ul>
-                        <li>Kill the power, water and gas supply to prevent further hazard to people.</li>
-                        <li> Sound based warning system.</li>
-                    </ul>
-                    <br>
-                    </p>
                     <a target="_blank" href="https://github.com/anshulahuja98/CFD-19-IITJ/" class="btn btn-grey btn-md">Code
                         <i class="fa fa-github ml-1"></i>
                     </a>
@@ -245,7 +225,7 @@
                         <i class="fa fa-youtube ml-1"></i>
                     </a>
                 </div>
-                <div class="col-md-6 mb-4">
+                <div class="col-md-7 mb-4">
                     <img src="img/block2.png" style="margin-left: 5rem; height: 30rem; width: 32rem;   "
                          class="img-fluid z-depth-1-half" alt="">
                 </div>
@@ -255,27 +235,27 @@
         <section class="mt-5 wow fadeIn">
             <div class="row">
                 <div class="col-md-6 mb-4">
-                    <h3 class="h3 mb-3">Skin Disease Diagnosis </h3>
-                    <hr>
-                    <ul>
-                        <li> Using <b>Custom Vision service of Azure cognitive services</b> to predict different type of
-                            skin
-                            diseases which may arise during a flood scenario.
-                        </li>
-                        <li> The accompanying Android App has the exported tensorflow model from customvision.ai to
-                            predict diseases <b>offline.</b>
-                        </li>
-                        <li> It Eliminates the need Medical Test when there is lack of infrastructure during a calamity.
-                        </li>
-                        <li>Provide <b>faster medical diagnosis</b></li>
-                        <br><br>
-                        <a href="/skin_app.apk">
-                            <button class="btn btn-info">Download</button>
-                        </a>
-                    </ul>
+                    <h3 class="h3 mb-3">Platform Agnostic backend</h3>
+                    
+                        Using Azure Blockchain Workbench based on Azure Blockchain service, we have exposed REST API endpoints to transact on the blockchain. This will ensure the ability to make it versatile to cope with diverse types of voting platforms be it web or app.
+                        <br>
+                        Eventually we have ended up speeding up the vote counting process while maintaining transparency at every level voted through our EVMs.                       
+                        We plan to later integrate our solution with present paper trail solutions.
+
+                        Currently we have maintained the highest level of security possible in our API calls from raspberry Pi by using a token and certificate based authentication for API calls.
+                        <br>
+
+                    <h3 class="h3 mb-3">Our solution</h3>
+                    
+                        Using Azure Blockchain Workbench based on Azure Blockchain service, we have exposed REST API endpoints to transact on the blockchain. This will ensure the ability to make it versatile to cope with diverse types of voting platforms be it web or app.
+                        <br>
+                        Eventually we have ended up speeding up the vote counting process while maintaining transparency at every level voted through our EVMs.                       
+                        We plan to later integrate our solution with present paper trail solutions.
+                        Currently we have maintained the highest level of security possible in our API calls from raspberry Pi by using a token and certificate based authentication for API calls.
+
                 </div>
                 <div class="col-md-6 mb-4">
-                    <img src="img/custom_vision.svg" style="margin-left: 5rem; " class="img-fluid z-depth-1-half"
+                    <img src="img/EVM-min.jpeg" style="margin-left: 5rem; " class="img-fluid z-depth-1-half"
                          alt="">
                 </div>
             </div>
