--- a/main-server/templates/votes.html
+++ b/main-server/templates/votes.html
@@ -34,8 +34,7 @@
                     <div class="col-lg-4 col-md-6 mb-4">
                         <div class="card">
                             <div class="view overlay">
-                                <img src="https://mdbootstrap.com/wp-content/uploads/2017/11/brandflow-tutorial-fb.jpg"
-                                     class="card-img-top" alt="">
+                                <img src="{{ id[6] }}" class="card-img-top" alt="">
                             </div>
                             <div class="card-body">
                                 <h4 class="card-title">{{ id[1] }}</h4>
@@ -54,7 +53,6 @@
         </section>
     </div>
 </main>
-
 <footer class="page-footer text-center font-small mdb-color darken-2 mt-4 wow fadeIn">
     <hr class="my-4">
     <div class="pb-4">
