add: votes button

--- a/main-server/templates/index.html
+++ b/main-server/templates/index.html
@@ -51,6 +51,7 @@
                 <h1 class="h1-responsive font-weight-bold">Voting Vader</h1>
                 <h3 class="h3-responsive">Millennium Falcon</h3>
                 <h5 class="h5-responsive">IIT Jodhpur</h5>
+                <a href="/votes"><button type="button" class="btn btn-primary">Votes</button></a>
             </div>
         </div>
         <div class="carousel-item">
@@ -59,6 +60,7 @@
                 <h1 class="h1-responsive font-weight-bold">Voting Vader</h1>
                 <h3 class="h3-responsive">Millennium Falcon</h3>
                 <h5 class="h5-responsive">IIT Jodhpur</h5>
+                <a href="/votes"><button type="button" class="btn btn-primary">Votes</button></a>
             </div>
         </div>
     </div>
