--- a/main-server/templates/index.html
+++ b/main-server/templates/index.html
@@ -151,9 +151,10 @@
                             <i class="fa fa-check-circle fa-2x indigo-text"></i>
                         </div>
                         <div class="col-10">
-                            <h6 class="feature-title" style="font-weight: 600">Customvision.ai</h6>
-                            <p class="black-text">Part of Azure Cognitive services, used to train data for image
-                                recognition, for skin disease detection.
+                            <h6 class="feature-title" style="font-weight: 600">Azure Blockchain Service</h6>
+                            <p class="black-text"> A fully managed ledger service that allows to grow and operate
+                                blockchain networks at scale in Azure, used to deploy the election network comsortium
+                                and devlop the smart contracts used.
                             </p>
                             <div style="height:15px"></div>
                         </div>
@@ -177,8 +178,7 @@
                         </div>
                         <div class="col-10">
                             <h6 class="feature-title" style="font-weight: 600">Raspberry Pi</h6>
-                            <p class="black-text">It acts as the IOT hub to gather data from slave Node MCU boards, to
-                                send data to the cloud. It also takes care of safety protocols</p>
+                            <p class="black-text">It acts as an EVM to record votes after verification. </p>
                             <div style="height:15px"></div>
                         </div>
                     </div>
@@ -187,14 +187,22 @@
                             <i class="fa fa-check-circle fa-2x indigo-text"></i>
                         </div>
                         <div class="col-10">
-                            <h6 class="feature-title" style="font-weight: 600">Node MCU</h6>
-                            <p class="black-text">Act as Slave IOT boards for data collection</p>
+                            <h6 class="feature-title" style="font-weight: 600">RFID</h6>
+                            <p class="black-text">Used to authenticate the EVM and add an extra layer of security.</p>
                             <div style="height:15px"></div>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 mt-2">
                     <div class="row">
+                        <div class="col-2">
+                            <i class="fa fa-check-circle fa-2x indigo-text"></i>
+                        </div>
+                        <div class="col-10">
+                            <h6 class="feature-title" style="font-weight: 600">Azure blocakchain Workbench</h6>
+                            <p class="black-text">To configure and deploy the consortium network </p>
+                            <div style="height:15px"></div>
+                        </div>
                         <div class="col-2">
                             <i class="fa fa-check-circle fa-2x indigo-text"></i>
                         </div>
