--- a/main-server/templates/index.html
+++ b/main-server/templates/index.html
@@ -112,7 +112,7 @@
                     <img src="/img/microsoft-azure.png" alt="" class="z-depth-0 img-fluid">
                 </div>
                 <div class="col-md-4">
-                    <img src="/img/db.png" alt="" class="z-depth-0 img-fluid">
+                    <img src="/img/cosmos-db.png" alt="" class="z-depth-0 img-fluid">
                 </div>
                 <div class="col-md-4">
                     <img src="/img/edge.png" alt="" class="z-depth-0 img-fluid">
@@ -153,7 +153,7 @@
                         <div class="col-10">
                             <h6 class="feature-title" style="font-weight: 600">Azure Blockchain Service</h6>
                             <p class="black-text"> A fully managed ledger service that allows to grow and operate
-                                blockchain networks at scale in Azure, used to deploy the election network comsortium
+                                blockchain networks at scale in Azure, used to deploy the election network consortium
                                 and devlop the smart contracts used.
                             </p>
                             <div style="height:15px"></div>
@@ -166,8 +166,8 @@
                             <i class="fa fa-check-circle fa-2x indigo-text"></i>
                         </div>
                         <div class="col-10">
-                            <h6 class="feature-title" style="font-weight: 600">Sqlite DB</h6>
-                            <p class="black-text">For storing related to the project
+                            <h6 class="feature-title" style="font-weight: 600">Azure Cosmos DB</h6>
+                            <p class="black-text">Used the extensively scalable Azure Cosmos DB(Azure Table) for storing other data related to the project.
                             </p>
                             <div style="height:15px"></div>
                         </div>
@@ -199,18 +199,18 @@
                             <i class="fa fa-check-circle fa-2x indigo-text"></i>
                         </div>
                         <div class="col-10">
-                            <h6 class="feature-title" style="font-weight: 600">Azure blocakchain Workbench</h6>
-                            <p class="black-text">To configure and deploy the consortium network </p>
+                            <h6 class="feature-title" style="font-weight: 600">Azure Blockchain Workbench</h6>
+                            <p class="black-text">To configure and deploy the consortium network and configure using it to expose REST APIs to interact with the contracts to provide a platform agnostic service. </p>
                             <div style="height:15px"></div>
                         </div>
-                        <div class="col-2">
+                        <!-- <div class="col-2">
                             <i class="fa fa-check-circle fa-2x indigo-text"></i>
                         </div>
                         <div class="col-10">
-                            <h6 class="feature-title" style="font-weight: 600">Hardware Extensions</h6>
+                            <h6 class="feature-title" style="font-weight: 600">Python/Flask Extensions</h6>
                             <p class="black-text">Electronic valve, 240V Relay, Speakers</p>
                             <div style="height:15px"></div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
