--- a/main-server/templates/index.html
+++ b/main-server/templates/index.html
@@ -149,6 +149,24 @@
         </section>
         <hr class="mb-5">
         <section>
+            <div class="row d-flex flex-wrap align-items-center">
+                <div class="col-12 mb-5 text-justify">
+                    <h3 class="h3-responsive mb-5 font-weight-bold text-center">Workflows</h3>
+                    Using <b>Azure Blockchain Workbench</b> based on <b>Azure Blockchain service</b>, we have exposed <b>REST API</b>
+                    endpoints to transact on the blockchain. This will ensure the ability to make it versatile to cope
+                    with diverse types of voting platforms be it web or app.<br><br>
+                    Eventually, we have ended up speeding up the vote-counting process while maintaining transparency at
+                    every level voted through our EVMs. We plan to later integrate our solution with present paper trail
+                    solutions. Currently, we have maintained the highest level of security possible in our API calls
+                    from <b>Raspberry Pi</b> by using a token and certificate-based authentication for API calls.
+                </div>
+                <div class="col-12 mb-4">
+                    <img src="img/arch-diag.png" style="height: auto; width: 100%;" class="img-fluid z-depth-1-half">
+                </div>
+            </div>
+        </section>
+        <hr class="mb-5">
+        <section>
             <h2 class="my-5 h2 text-center">Technologies Used</h2>
             <div class="row">
                 <div class="col-md-4">
@@ -249,10 +267,6 @@
                     </div>
                 </div>
             </div>
-        </section>
-        <hr class="mb-5">
-        <section class="text-center">
-            <h3 class="h3-responsive mb-5 font-weight-bold">Workflows</h3>
         </section>
     </div>
 </main>
